--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "n8n",
-  "version": "0.231.0",
+  "version": "1.0.0",
   "scripts": {
-    "start": "n8n"
+    "start": "node packages/cli/bin/n8n",
+    "build": "echo 'no build step required'"
   },
   "dependencies": {
-    "n8n": "^0.231.0"
+    "n8n": "^1.0.0"
   }
 }
